--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="stylesheet" href="css/swiper.min.css?_v=20221104210116"> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221104210116">
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Портфолио</title>
 </head>
 
@@ -48,7 +47,7 @@
 						<div class="main-section__img-block img-block-main-section">
 							<div class="img-block-main-section__body">
 								<div class="img-block-main-section__img">
-									<picture><source srcset="img/myAvatar.webp" type="image/webp"><img src="img/myAvatar.png" alt="avatar"></picture>
+									<img src="img/myAvatar.png" alt="avatar">
 								</div>
 								<div class="img-block-main-section__item img-block-main-section__item-html">html</div>
 								<div class="img-block-main-section__item img-block-main-section__item-css">css</div>
@@ -70,7 +69,7 @@
 							<div class="portfolio__slides swiper-wrapper">
 								<div class="portfolio__slide slide-portfolio swiper-slide">
 									<div class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/sport.webp" type="image/webp"><img src="img/portfolio/sport.jpg" alt="sport site" data-open="true"></picture>
+										<img src="img/portfolio/sport.jpg" alt="sport site" data-open="true">
 									</div>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Fintess Gym</div>
@@ -82,7 +81,7 @@
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
 									<div class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/Locus.webp" type="image/webp"><img src="img/portfolio/Locus.jpg" alt="locus site" data-open="true"></picture>
+										<img src="img/portfolio/Locus.jpg" alt="locus site" data-open="true">
 									</div>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Locus Site</div>
@@ -96,7 +95,7 @@
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
 									<div class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/work.webp" type="image/webp"><img src="img/portfolio/work.jpg" alt="work site" data-open="true"></picture>
+										<img src="img/portfolio/work.jpg" alt="work site" data-open="true">
 									</div>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Work Site</div>
@@ -108,7 +107,7 @@
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
 									<div class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/restaurant-burger.webp" type="image/webp"><img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true"></picture>
+										<img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true">
 									</div>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Restaurant Burger</div>
@@ -145,8 +144,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221104210116"></script>
-	<script src="js/swiper-bundle.min.js?_v=20221104210116"></script>
+	<script src="js/app.min.js"></script>
+	<script src="js/swiper-bundle.min.js"></script>
 </body>
 
 </html>
