--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="stylesheet" href="css/swiper.min.css?_v=20221104210116"> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221104210116">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221108073543">
 	<title>Портфолио</title>
 </head>
 
@@ -69,9 +68,10 @@
 						<div class="portfolio__slider swiper">
 							<div class="portfolio__slides swiper-wrapper">
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/sport.webp" type="image/webp"><img src="img/portfolio/sport.jpg" alt="sport site" data-open="true"></picture>
-									</div>
+									<a href="https://bonesneedle.github.io/sport-project/" target="_blank"
+										class="slide-portfolio__img">
+										<picture><source srcset="img/portfolio/sport.webp" type="image/webp"><img src="img/portfolio/sport.jpg" alt="sport site"></picture>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Fintess Gym</div>
 										<div class="slide-portfolio__text text"></div>
@@ -81,9 +81,9 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
+									<a href="https://bonesneedle.github.io/locus/" target="_blank" class="slide-portfolio__img">
 										<picture><source srcset="img/portfolio/Locus.webp" type="image/webp"><img src="img/portfolio/Locus.jpg" alt="locus site" data-open="true"></picture>
-									</div>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Locus Site</div>
 										<div class="slide-portfolio__text text">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -95,9 +95,10 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
+									<a href="https://bonesneedle.github.io/work-site/" target="_blank"
+										class="slide-portfolio__img">
 										<picture><source srcset="img/portfolio/work.webp" type="image/webp"><img src="img/portfolio/work.jpg" alt="work site" data-open="true"></picture>
-									</div>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Work Site</div>
 										<div class="slide-portfolio__text text"></div>
@@ -107,9 +108,10 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
+									<a href="https://bonesneedle.github.io/restaurant-burger/" target="_blank"
+										class="slide-portfolio__img">
 										<picture><source srcset="img/portfolio/restaurant-burger.webp" type="image/webp"><img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true"></picture>
-									</div>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Restaurant Burger</div>
 										<div class="slide-portfolio__text text"></div>
@@ -145,8 +147,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221104210116"></script>
-	<script src="js/swiper-bundle.min.js?_v=20221104210116"></script>
+	<script src="js/app.min.js?_v=20221108073543"></script>
 </body>
 
 </html>
