--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
 						<div class="portfolio__slider swiper">
 							<div class="portfolio__slides swiper-wrapper">
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
-										<img src="img/portfolio/sport.jpg" alt="sport site" data-open="true">
-									</div>
+									<a href="https://bonesneedle.github.io/sport-project/" target="_blank"
+										class="slide-portfolio__img">
+										<img src="img/portfolio/sport.jpg" alt="sport site">
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Fintess Gym</div>
 										<div class="slide-portfolio__text text"></div>
@@ -80,9 +81,9 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
+									<a href="https://bonesneedle.github.io/locus/" target="_blank" class="slide-portfolio__img">
 										<img src="img/portfolio/Locus.jpg" alt="locus site" data-open="true">
-									</div>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Locus Site</div>
 										<div class="slide-portfolio__text text">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -94,9 +95,10 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
+									<a href="https://bonesneedle.github.io/work-site/" target="_blank"
+										class="slide-portfolio__img">
 										<img src="img/portfolio/work.jpg" alt="work site" data-open="true">
-									</div>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Work Site</div>
 										<div class="slide-portfolio__text text"></div>
@@ -106,9 +108,10 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<div class="slide-portfolio__img">
+									<a href="https://bonesneedle.github.io/restaurant-burger/" target="_blank"
+										class="slide-portfolio__img">
 										<img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true">
-									</div>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Restaurant Burger</div>
 										<div class="slide-portfolio__text text"></div>
@@ -145,7 +148,6 @@
 		</div>
 	</div>
 	<script src="js/app.min.js"></script>
-	<script src="js/swiper-bundle.min.js"></script>
 </body>
 
 </html>
