add portfolio page ragnarok

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221114060131">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221115080511">
 	<title>Портфолио</title>
 </head>
 
-<body>
+<body">
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container container">
@@ -110,7 +110,7 @@
 								<div class="portfolio__slide slide-portfolio swiper-slide">
 									<a href="https://bonesneedle.github.io/restaurant-burger/" target="_blank"
 										class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/restaurant-burger.webp" type="image/webp"><img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true"></picture>
+										<picture><source srcset="img/portfolio/restaurant-burger1.webp" type="image/webp"><img src="img/portfolio/restaurant-burger1.jpg" alt="restaurant-burger" data-open="true"></picture>
 									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Restaurant Burger</div>
@@ -121,10 +121,10 @@
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<!-- <a href="https://bonesneedle.github.io/restaurant-burger/" target="_blank"
+									<a href="https://bonesneedle.github.io/restaurant-burger/index.html" target="_blank"
 										class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/restaurant-burger.webp" type="image/webp"><img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true"></picture>
-									</a> -->
+										<picture><source srcset="img/portfolio/ragnarok.webp" type="image/webp"><img src="img/portfolio/ragnarok.jpg" alt="ragnarok" data-open="true"></picture>
+									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing God of War Ragnarok</div>
 										<div class="slide-portfolio__text text"></div>
@@ -160,7 +160,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221114060131"></script>
-</body>
+	<script src="js/app.min.js?_v=20221115080511"></script>
+	</body>
 
 </html>
