fix ragnarok page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221115080511">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221115091357">
 	<title>Портфолио</title>
 </head>
 
@@ -110,18 +110,18 @@
 								<div class="portfolio__slide slide-portfolio swiper-slide">
 									<a href="https://bonesneedle.github.io/restaurant-burger/" target="_blank"
 										class="slide-portfolio__img">
-										<picture><source srcset="img/portfolio/restaurant-burger1.webp" type="image/webp"><img src="img/portfolio/restaurant-burger1.jpg" alt="restaurant-burger" data-open="true"></picture>
+										<picture><source srcset="img/portfolio/restaurant-burger.webp" type="image/webp"><img src="img/portfolio/restaurant-burger.jpg" alt="restaurant-burger" data-open="true"></picture>
 									</a>
 									<div class="slide-portfolio__body">
 										<div class="slide-portfolio__tittle tittle-small">Landing Restaurant Burger</div>
 										<div class="slide-portfolio__text text"></div>
-										<a href="https://bonesneedle.github.io/restaurant-burger/" target="_blank"
+										<a href="https://bonesneedle.github.io/restaurant-burger/index.html" target="_blank"
 											class="slide-portfolio__btn"><span class="_icon-arrow">Посмотреть
 												больше</span></a>
 									</div>
 								</div>
 								<div class="portfolio__slide slide-portfolio swiper-slide">
-									<a href="https://bonesneedle.github.io/restaurant-burger/index.html" target="_blank"
+									<a href="https://bonesneedle.github.io/ragnarok/index.html" target="_blank"
 										class="slide-portfolio__img">
 										<picture><source srcset="img/portfolio/ragnarok.webp" type="image/webp"><img src="img/portfolio/ragnarok.jpg" alt="ragnarok" data-open="true"></picture>
 									</a>
@@ -160,7 +160,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221115080511"></script>
+	<script src="js/app.min.js?_v=20221115091357"></script>
 	</body>
 
 </html>
